# pytest_proj1

./: README.md  pyproject.toml
tests/: test_arrs.py
utils/: arrs.py
